[workspace]
members = [
    "string_replace", "static_lab_3", "dynamic_lab_3", "utils", "injector", "victim"
]
#[package]
#name = "lab_1"
#version = "0.1.0"
#edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#winapi-x86_64-pc-windows-gnu = "0.4.0"