[workspace]
members = [
    "process_driver", "emiter", "registry_driver", "utils"
]
resolver = "2"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
wdk = "0.1.0"
wdk-alloc = "0.1.0"
wdk-panic = "0.1.0"
wdk-sys = "0.1.0"
wdk-macros = "0.1.0"
wdk-build = "0.1.0"
nt-string = {default-features = false, version = "0.1.1"}
encode_unicode = {default-features = false, version = "1.0.0"}