[package]
name = "process_driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


lto = true # optional setting to enable Link Time Optimizations

[build-dependencies]
wdk-build.workspace = true
[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-macros.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true
nt-string.workspace = true
spin = "0.9.8"
winapi = {version = "0.3.9", features = ["winuser", "winbase"]}
#the additional dependencies
static_assertions = "1.1.0"
failure = "0.1.8"
paste = "1.0.14"
[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]
