[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
utils = { path = "../utils" }
thread_pool = { path = "../thread_pool" }
winapi = { version = "0.3.9", features = ["winuser", "objbase", "handleapi", "shobjidl", "winerror", "mmeapi", "windef", "processthreadsapi", "sysinfoapi", "memoryapi"] }