[package]
name = "static_lab-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror", "mmeapi", "mmsystem", "windef", "processthreadsapi"] }
winapi-util = "0.1.5"
num_enum = "0.7.0"
utils = { path = "../utils" }
alloca = "0.4.0"
string_replace = { path = "../string_replace" }
[target.'cfg(target_os = "windows")'.features]
default = ["windows"]
[build-dependencies]
embed-resource = "2.3.0"
