[package]
name = "string_replace"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror", "mmeapi", "mmsystem", "windef", "processthreadsapi", "sysinfoapi"] }
winapi-util = "0.1.5"
num_enum = "0.7.0"
utils = { path = "../utils" }
[target.'cfg(target_os = "windows")'.features]
default = ["windows"]