[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
wdk-build.workspace = true
[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-macros.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true