[package]
name = "victim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror", "mmeapi", "mmsystem", "windef", "processthreadsapi"] }
utils = { path = "../utils" }
[target.'cfg(target_os = "windows")'.features]
default = ["windows"]